// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap -10000 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap -10000 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 0 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 0 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 10000 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 10000 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 79228162514264337593543950336 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e9 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 79228162514264337593543950336 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token0 1`] = `
{
  "delta": {
    "amount0": -10000n,
    "amount1": 10032n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x1b",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x3b",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0x8cb",
    "steps": "0xb3ea",
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920941866287043816850431081895n,
  "tick_after": 0n,
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token1 1`] = `
{
  "delta": {
    "amount0": 10032n,
    "amount1": -10000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x51",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x3c",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0x8f1",
    "steps": "0xdf0b",
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920935060639705398047133577709n,
  "tick_after": -1n,
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": -500000000000000000n,
    "amount1": 1003009027081243732n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x1b",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x3d",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0x8b1",
    "steps": "0xbdfa",
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 680564733841876926926749214863536422912n,
  "tick_after": 1386295n,
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": -999999999999999996n,
    "amount1": 18466747002319258406770079872888746570n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x12b",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x83",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0x2cbc",
    "steps": "0x2e58f",
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 6277100250585753475930931601400621808602321654880405518632n,
  "tick_after": 88722883n,
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": 1003009027081243732n,
    "amount1": -500000000000000000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x36",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x3d",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0xbeb",
    "steps": "0xd0b6",
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 170141183460469231731687303715884105728n,
  "tick_after": -1386296n,
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": 18466747002319258406770079872888746569n,
    "amount1": -999999999999999994n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x147",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x84",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0x3021",
    "steps": "0x3278b",
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 18446748437148339061n,
  "tick_after": -88722884n,
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x0",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x26",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0x1f6",
    "steps": "0x4abb",
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x0",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x26",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0x1f6",
    "steps": "0x4ab4",
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": 10000n,
    "amount1": -9969n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x51",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x3c",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0x8ab",
    "steps": "0xdec9",
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920935070848176405709111855138n,
  "tick_after": -1n,
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token1 1`] = `
{
  "delta": {
    "amount0": -9969n,
    "amount1": 10000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x1b",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x3b",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0x892",
    "steps": "0xb3a6",
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 340282366920941856078572809188248941300n,
  "tick_after": 0n,
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": 1000000000000000000n,
    "amount1": -499248873309964947n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x1b",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x3d",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0x9b4",
    "steps": "0xc0fe",
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 170396778628411849505946223050459795422n,
  "tick_after": -1383293n,
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": 1000000000000000000n,
    "amount1": -499248873309964947n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x1b",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x40",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0xa92",
    "steps": "0xd2d2",
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 170396778628411849505946223050459795422n,
  "tick_after": -1383293n,
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": -499248873309964947n,
    "amount1": 1000000000000000000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x1b",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x3d",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0x941",
    "steps": "0xbe90",
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 679543886741114111536359091041241118277n,
  "tick_after": 1383292n,
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": -499248873309964947n,
    "amount1": 1000000000000000000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x1b",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x40",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0xae9",
    "steps": "0xcf85",
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 679543886741114111536359091041241118277n,
  "tick_after": 1383292n,
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 79228162514264337593543950336 token0 1`] = `
{
  "delta": {
    "amount0": 79228162514264337593543950336n,
    "amount1": -999999999987340232n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x3b1",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x5d",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0x62dd",
    "steps": "0x50cb9",
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 4307890968852183321656454888n,
  "tick_after": -50185212n,
}
`;

exports[`core 1e18 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 79228162514264337593543950336 token1 1`] = `
{
  "delta": {
    "amount0": -999999999987340232n,
    "amount1": 79228162514264337593543950336n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x396",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x5c",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0x61f5",
    "steps": "0x4df4f",
  },
  "liquidity_after": 1000000000000000000n,
  "sqrt_ratio_after": 26879066827489470242203952493307087579544590886863n,
  "tick_after": 50185211n,
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 79228162514264337593543950336 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity above price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 79228162514264337593543950336 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 79228162514264337593543950336 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e18 liquidity below price, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 79228162514264337593543950336 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap -10000 token0 1`] = `
{
  "delta": {
    "amount0": -10000n,
    "amount1": 10001n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x1c",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x3b",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0x8f4",
    "steps": "0xb49d",
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431771614280n,
  "tick_after": 0n,
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap -10000 token1 1`] = `
{
  "delta": {
    "amount0": 10001n,
    "amount1": -10000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x54",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x3c",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0x938",
    "steps": "0xe01b",
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431764808632n,
  "tick_after": -1n,
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": -1000000000000000000n,
    "amount1": 1000000000000000002n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x1c",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x3b",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0x8fc",
    "steps": "0xb4ae",
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463803656974352706675260n,
  "tick_after": 0n,
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap -1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": -1000000000000000000n,
    "amount1": 1000000000000000002n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x1c",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x3b",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0x8fd",
    "steps": "0xb4af",
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463803656974352706675260n,
  "tick_after": 0n,
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": 1000000000000000002n,
    "amount1": -1000000000000000000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x39",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x3c",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0x93c",
    "steps": "0xc896",
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463123092240510829747992n,
  "tick_after": -1n,
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap -1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": 1000000000000000002n,
    "amount1": -1000000000000000000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x39",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x3c",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0x93c",
    "steps": "0xc899",
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463123092240510829747992n,
  "tick_after": -1n,
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap 0 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x0",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x26",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0x1f6",
    "steps": "0x4abb",
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap 0 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x0",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x26",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0x1f6",
    "steps": "0x4ab4",
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "LIMIT_DIRECTION",
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap 10000 token0 1`] = `
{
  "delta": {
    "amount0": 10000n,
    "amount1": -9999n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x54",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x3c",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0x8f4",
    "steps": "0xdfd8",
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431764808633n,
  "tick_after": -1n,
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap 10000 token1 1`] = `
{
  "delta": {
    "amount0": -9999n,
    "amount1": 10000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x1c",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x3b",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0x8bd",
    "steps": "0xb458",
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463463374607431771614279n,
  "tick_after": 0n,
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "delta": {
    "amount0": 1000000000000000000n,
    "amount1": -999999999999999998n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x39",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x3c",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0x8f9",
    "steps": "0xc856",
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463123092240510829748333n,
  "tick_after": -1n,
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap 1000000000000000000 token0 skip 5 1`] = `
{
  "delta": {
    "amount0": 1000000000000000000n,
    "amount1": -999999999999999998n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x39",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x3c",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0x8f9",
    "steps": "0xc859",
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463123092240510829748333n,
  "tick_after": -1n,
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "delta": {
    "amount0": -999999999999999998n,
    "amount1": 1000000000000000000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x1c",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x3b",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0x8c5",
    "steps": "0xb469",
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463803656974352706674919n,
  "tick_after": 0n,
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap 1000000000000000000 token1 skip 5 1`] = `
{
  "delta": {
    "amount0": -999999999999999998n,
    "amount1": 1000000000000000000n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x1c",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x3b",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0x8c6",
    "steps": "0xb46a",
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282366920938463803656974352706674919n,
  "tick_after": 0n,
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap 79228162514264337593543950336 token0 1`] = `
{
  "delta": {
    "amount0": 79228162514264337593543950336n,
    "amount1": -79228156237163099530060194283n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x54",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x3c",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0x8fe",
    "steps": "0xdfec",
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282339960993932299601503360233022685n,
  "tick_after": -1n,
}
`;

exports[`core 1e32 full range liquidity, starting at price 1, tick_spacing=max, fee=0 swap 79228162514264337593543950336 token1 1`] = `
{
  "delta": {
    "amount0": -79228156237163099530060194283n,
    "amount1": 79228162514264337593543950336n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x1c",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x3b",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0x8c7",
    "steps": "0xb46c",
  },
  "liquidity_after": 1000000000000000000000000000000000000n,
  "sqrt_ratio_after": 340282393880885130614014402098783298475n,
  "tick_after": 0n,
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 79228162514264337593543950336 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core 2**96 full range liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 79228162514264337593543950336 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap -10000 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap -10000 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 0 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 0 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 10000 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 10000 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 79228162514264337593543950336 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at max, tick_spacing=0.6%, fee=0.3% swap 79228162514264337593543950336 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap -10000 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap -10000 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 0 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 0 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 10000 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 10000 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 79228162514264337593543950336 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at min, tick_spacing=0.6%, fee=0.3% swap 79228162514264337593543950336 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 79228162514264337593543950336 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 79228162514264337593543950336 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap -10000 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap -10000 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 0 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 0 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 10000 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 10000 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 79228162514264337593543950336 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=0.6%, fee=max swap 79228162514264337593543950336 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap -10000 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap -10000 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap 0 token0 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x0",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x26",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0x1f6",
    "steps": "0x4abb",
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap 0 token1 1`] = `
{
  "delta": {
    "amount0": 0n,
    "amount1": 0n,
  },
  "execution_resources": {
    "bitwise_builtin_applications": "0x0",
    "ec_op_builtin_applications": "0x3",
    "ecdsa_builtin_applications": "0x0",
    "keccak_builtin_applications": "0x0",
    "pedersen_builtin_applications": "0x26",
    "poseidon_builtin_applications": "0x0",
    "range_check_builtin_applications": "0x1f6",
    "steps": "0x4ab4",
  },
  "liquidity_after": 0n,
  "sqrt_ratio_after": 340282366920938463463374607431768211456n,
  "tick_after": 0n,
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap 10000 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap 10000 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap 1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap 1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap 79228162514264337593543950336 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=1, fee=max swap 79228162514264337593543950336 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap -10000 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap -10000 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap 0 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap 0 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap 10000 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap 10000 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap 1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap 1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap 79228162514264337593543950336 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core no liquidity, starting at price 1, tick_spacing=max, fee=max swap 79228162514264337593543950336 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -10000 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap -1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 0 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1 token1 limit 1.000 2`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 10000 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 2 limit 0.500 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token0 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 2 limit 2.000 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 1000000000000000000 token1 skip 5 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 79228162514264337593543950336 token0 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;

exports[`core overlapping positions asymmetric, starting at price 1, tick_spacing=0.6%, fee=0.3% swap 79228162514264337593543950336 token1 1`] = `
{
  "revert_reason": "RunResources has no remaining steps",
}
`;
